@@ -5,6 +5,7 @@ projects.  In alphabetical order, they are as follows:
    - JacORB: http://www.jacorb.org/
    - Kunststoff look and feel: http://www.incors.org/
    - Metouia look and feel: http://mlf.sf.net/
+   - JGoodies Looks look and feel: http://www.jgoodies.com/
    - OpenORB: http://openorb.exolab.org/ or http://openorb.sf.net/
 
 The complete source code for each of these projects can be found at
